# hands_on_dioxus_brooker_iteration1

./: Cargo.toml  Dioxus.toml  README.md
assets/styling/: main.css  profile.css  stock-chart.css
src/: main.rs
src/components/: mod.rs  stock_card.rs  stock_chart.rs  stock_list_item.rs  stocks_list.rs
src/data/: json_utils.rs  mod.rs  myProfile.json
src/models/: mod.rs  period.rs  profile.rs  stock.rs
src/server/: mod.rs  profile.rs  stock.rs
src/views/: mod.rs  most_common_stocks.rs  navbar.rs  profile.rs  start.rs  stocks.rs
