[package]
name = "brooker-iteration1"
version = "0.1.0"
authors = ["jan.dahlke <jan.dahlke@akquinet.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1.0" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["time"] }
dotenvy = "0.15"
anyhow = "1.0"
futures = "0.3"
dioxus-charts = { git = "https://github.com/janpauldahlke/dioxus-charts" }
web-sys = { version = "0.3.82", features = ["console"] }
chrono = "0.4"

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server"]
